--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.codecode</groupId>
 	<artifactId>master</artifactId>
-	<version>0.0</version>
+	<version>0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>Master Parent Project</name>
+	<name>Master Parent Pom</name>
 
 	<organization>
 		<name>codecode</name>
